fixed nav and footer alignments
global css changes

--- a/styles.css
+++ b/styles.css
@@ -16,15 +16,13 @@
 .topnav {
     display: flex;
     align-items: center;
-    position: absolute;
+    position: sticky;
     top: 0;
-    left: 0;
-    right: 0;
     background-color: var(--bg-black);
     padding: 0px;
     border-bottom: 3px solid var(--border-color);
+    width: 100%;
 }
-
 
 body {
     background-color: var(--bg-color);
@@ -32,9 +30,18 @@ body {
     font-family: 'JetBrains Mono', monospace;
     margin: 0;
     display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    flex-grow: 1;
 }
 
 .header {
@@ -42,17 +49,14 @@ body {
 }
 
 .footer {
-    align-items: bottom;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: var(--bg-black);
-    padding: 0px;
-    padding-left: 2%;
-    text-align: left;
     color: var(--fg-color);
     border-top: 3px solid var(--border-color);
+    background-color: var(--bg-black);
+    position: relative;
+    padding-left: 2%;
+    box-sizing: border-box;
+    text-align: left;
+    width: 100%;
 }
 
 a {
@@ -86,7 +90,7 @@ button {
 }
 
 .dropdown-content a:hover { /* Change color of dropdown links on hover */
-    background-color: var(--border-color);
+    background-color: var(--bg-black);
 }
 
 .dropdown:hover .dropdown-content { /* Show the dropdown menu on hover */
